Added CacheClipPlane for d3d9
Fix an issue with FarCry by adding CacheClipPlane

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -11,6 +11,7 @@ WaitForProcess           = 0
 [Compatibility]
 AntiAliasing             = 0
 ArmadaFix                = 0
+CacheClipPlane           = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
 DDrawCompat20            = 0
